# paragon_portable_stl

./: .gitignore  CMakeLists.txt  LICENSE.txt
docs/: about.md  code_of_conduct.md  configuring.md  contributing.md  hello_pstl.md  installation.md  license.md  qa.md
docs/advanced/: concurrency.md  custom_configuration.md  debug_profile.md  errors.md  memory.md  optimization_tips.md  troubleshooting.md
docs/resources/: curated_stl.md  generic_curlist.md  pstl_components.md  stl_tooling.md  technical_refs.md
include/portable_stl/algorithm/: algo_iter_swap.h  any_of.h  comp.h  comp_ref_type.h  constexpr_memcmp_equal.h  copy.h  copy_move_common.h  copy_n.h  ctz.h  element_count.h  equal.h  fill_n.h  find.h  find_end.h  find_first_of.h  find_if.h  find_if_not.h  find_last_of.h  iterator_operations.h  lexicographical_compare.h  max.h  min.h  move_algo.h  move_backward.h  remove.h  remove_if.h  rotate.h  search.h  swap_ranges.h  unwrap_iter.h  unwrap_range.h
include/portable_stl/array/: array.h  array_get.h
include/portable_stl/common/: char8_t.h  char_t.h  cstdint.h  int32_t.h  int64_t.h  long_size.h  max_align_t.h  nullptr_t.h  numeric_limits.h  ptrdiff_t.h  size_t.h  uchar_t.h  uint32_t.h  uint64_t.h
include/portable_stl/compare/: compare_functions.h  compare_t.h  not_ordered.h  ordered.h  partial_ordering.h  strong_ordering.h  unspecified.h  weak_ordering.h
include/portable_stl/concepts/: assignable_from.h  boolean_testable.h  class_or_enum.h  common_reference_with.h  common_with.h  comparison_common_type_with.h  constructible_from.h  convertible_to.h  copy_constructible.h  copyable.h  default_initializable.h  dereferenceable.h  derived_from.h  destructible.h  equality_comparable.h  equality_comparable_with.h  integral.h  is_equality_comparable.h  movable.h  move_constructible.h  partially_ordered_with.h  ranges_swap.h  regular.h  same_as.h  semiregular.h  signed_integral.h  swappable.h  swappable_with.h  totally_ordered.h  totally_ordered_with.h  weakly_equality_comparable_with.h
include/portable_stl/containers/: insert_return_type.h  node_handle.h  tree.h  tree_algo.h  tree_const_iterator.h  tree_end_node.h  tree_helpers.h  tree_iterator.h  tree_key_value_types.h  tree_map_pointer_types.h  tree_node.h  tree_node_base.h  tree_node_base_types.h  tree_node_destructor.h  tree_node_types.h  value_type_impl.h
include/portable_stl/error/: portable_stl_error.h
include/portable_stl/forward_list/: forward_begin_node.h  forward_list.h  forward_list_const_iterator.h  forward_list_impl.h  forward_list_iterator.h  forward_list_node.h  forward_list_types.h
include/portable_stl/functional/: binary_function.h  equal_to.h  identity.h  is_transparent.h  less.h
include/portable_stl/iterator/: advance.h  back_insert_iterator.h  basic_const_iterator.h  bidirectional_iterator_tag.h  common_iterator.h  constant_iterator.h  contiguous_iterator_tag.h  distance.h  next.h  (+22 more)
sample/: CMakeLists.txt
sample/lru_cache_lib/: CMakeLists.txt
sample/lru_cache_lib/include/: lru_cache.h
sample/lru_cache_lib/src/: lru_cache.cpp  lru_cache_v1_instance.h  lru_storage.h
sample/lru_cache_usage/: CMakeLists.txt  lru_cahce_usage.c
unit_test/: algorithm.cpp  array.cpp  common.cpp  compare.cpp  concepts.cpp  concepts_helper.h  function.cpp  functional.cpp  iterator.cpp  iterator_basic_const.cpp  iterator_concepts.cpp  iterator_helper.h  iterator_insert.cpp  iterator_move.cpp  iterator_reverse.cpp  iterator_traits.cpp  language_support.cpp  memory.cpp  memory_pointer_traits.cpp  memory_to_address.cpp  metaprogramming_array_modifications.cpp  metaprogramming_composite_type.cpp  metaprogramming_composite_type.h  metaprogramming_composite_type_inline_variables.h  metaprogramming_constant_evaluation.cpp  metaprogramming_cv_modifications.cpp  metaprogramming_helper.cpp  metaprogramming_integer_sequence.cpp  metaprogramming_logical_operator.cpp  metaprogramming_logical_operator.h  metaprogramming_logical_operator_inline_variables.h  metaprogramming_member_relationships.cpp  metaprogramming_other_transformations.cpp  metaprogramming_pointer_modifications.cpp  metaprogramming_primary_type.cpp  metaprogramming_primary_type.h  metaprogramming_primary_type_char8_t.h  metaprogramming_primary_type_inline_variables.h  metaprogramming_primary_type_no_char8_t.h  metaprogramming_reference_modifications.cpp  (+38 more)
unit_test/common/: common_helper.cpp  counter.h  default_only.h  emplaceable.h  function_types.h  move_only.h  test_allocator.h  test_compare.h  test_comparisons.h
unit_test/forward_list/: forward_list.cpp  forward_list_access.cpp  forward_list_construction.cpp  forward_list_modifiers.cpp  forward_list_operations.cpp
unit_test/list/: list.cpp  list_access.cpp  list_construction.cpp  list_modifiers.cpp  list_operations.cpp
unit_test/map/: map.cpp  map_access.cpp  map_construction.cpp  map_insert.cpp  map_lookup.cpp  map_modify.cpp  tree.cpp
unit_test/multimap/: multimap.cpp  multimap_access.cpp  multimap_construction.cpp  multimap_insert.cpp  multimap_lookup.cpp  multimap_modify.cpp
unit_test/set/: set_access.cpp  set_construction.cpp  set_insert.cpp  set_lookup.cpp  set_modify.cpp
unit_test/string/: basic_string.cpp  basic_string_access.cpp  basic_string_append.cpp  basic_string_assign.cpp  basic_string_capacity.cpp  basic_string_compare.cpp  basic_string_concatenate.cpp  basic_string_insert.cpp  basic_string_replace.cpp  basic_string_search.cpp  basic_string_test_helper.h  basic_string_view.cpp  basic_string_view_compare.cpp  basic_string_view_compare_op.cpp  basic_string_view_find.cpp  basic_string_view_find_first.cpp  basic_string_view_helper.h  char_traits_char.cpp  char_traits_char16_t.cpp  char_traits_char32_t.cpp  char_traits_char8_t.cpp  char_traits_wchar_t.cpp  convert.cpp  to_string.cpp
unit_test/vector/: implace_verctor_impl.cpp  vector.cpp  vector_bool.cpp  vector_bool_constructor.cpp  vector_bool_insert.cpp  vector_bool_iterators.cpp  vector_bool_modify.cpp  vector_constructor.cpp  vector_insert.cpp  vector_iterators.cpp  vector_modify.cpp  vector_test_helper.cpp  vector_test_helper.h
(+508 files in other folders)
